feat: add, modify logs